<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSelectAll"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionRemoveSecure"
        android:icon="@drawable/ic_shield"
        android:title="@string/remove_from_secure"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionExport"
        android:icon="@drawable/ic_save"
        android:title="@string/export_selected"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_selected"
        app:showAsAction="ifRoom" />
</menu>
