<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/groupGallery">
        <item
            android:id="@+id/navAllPhotos"
            android:icon="@drawable/ic_photo_all"
            android:title="@string/menu_all_photos"
            android:checkable="true" />
    </group>

    <!-- Pastas do usuário são adicionadas aqui em tempo de execução (mesmo id de grupo) -->
    <group android:id="@+id/groupFolders" />

    <item android:title="@string/menu_new_folder">
        <menu>
            <item
                android:id="@+id/navNewFolder"
                android:icon="@drawable/ic_folder_add"
                android:title="@string/menu_new_folder" />
        </menu>
    </item>

    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>
